# tegen

./: .gitignore  Cargo.toml  README.md
afl-fuzz/: .gitignore  Cargo.toml
afl-fuzz/in/: complicated_example  extreme_example  insanity  simple_example
afl-fuzz/src/: main.rs
benches/: benchmark_complicated_example.rs  benchmark_extreme_example.rs  benchmark_insanity.rs  benchmark_simple_example.rs
examples/: greetings.rs  hello_world.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  tegen.rs
